--- a/style.css
+++ b/style.css
@@ -1,22 +1,18 @@
-body {
+.margin-top-right-bottom-left {
 	margin: 1% 12% 1% 12%;
 
 }
-.top-link-page {
+.nav-border {
 	border: 2px solid #78C0E0;
 	border-radius: 15px;
 	width: 45%
 }
 
-.page-font-li {
+.nav-font-line-height {
 	line-height: 0.9;
 }
 
-.p-margir-top {
-margin-top: 5%;
-}
-
-.li-letter-size {
+.nav-li-letter-size {
 	font-size: 0.7em;
 }
 
@@ -24,26 +20,43 @@ margin-top: 5%;
 	text-decoration: none;
 }
 
+.header-magrin {
+	margin-left: 3%;
+}
+
+.main-section-magrin {
+	margin-left: 3%;
+}
+
+.header-p-mergin {
+margin-top: 5%;
+}
+
 h1 {
 	color: #150578;
 	text-shadow: 2px 2px #ccc;
 }
 
-.margin-tittle {
+.header-margin-h {
 	margin-bottom: 0px;
 }
 
-.page-font {
+.header-width-img {
+	width: 455px;
+}
+
+.header-width-h {
+	width: 685px;
+	font-size: 1.8em;
+}
+
+.font-size-family-heaght {
 	font-family: "Verdana";
 	font-size: 1rem;
 	line-height: 1.3;
 }
 
-.top-magrin {
-margin-left: 3%;
-}
-
-.p-size-intersting-link {
+.section-p-li-font-size {
 	font-size: 0.8em;
 }
 
@@ -51,7 +64,7 @@ margin-left: 3%;
 	font-size: 0.7em;
 }
 
-.font-weight-h {
+.article-font-weight-h {
 	font-weight: normal;
 	font-size: 1.2em;
 }
@@ -87,15 +100,6 @@ h2 {
 
 }
 
-.sitting-width-image {
-	width: 455px;
-}
-
-.sitting-width-h {
-	width: 685px;
-	font-size: 1.8em;
-}
-
 .footer-article-font-size {
 	font-size: 0.7em;
 }
@@ -105,7 +109,7 @@ h2 {
 }
 
 .footer-margin-bottom-size {
-	margin-bottom: 5%;
+	margin-bottom: 4%;
 }
 
 
