--- a/style.css
+++ b/style.css
@@ -1,11 +1,28 @@
-.margin-top-right-bottom-left {
-	margin: 1% 12% 1% 12%;
-
+.margin-body {
+	margin: 1% 1% 1% 1%;
 }
+
+ body {
+ 	background-image: url(images/Fon.jpg);
+ }
+
+.header-margin-bottom {
+	margin-bottom: 1%;
+}
+
 .nav-border {
 	border: 2px solid #78C0E0;
 	border-radius: 15px;
-	width: 45%
+	width: 40%;
+	background-color: white;
+	background-image: url(images/flower.png);
+	background-size: contain;
+	background-position: right;
+	background-repeat: no-repeat;	
+}
+
+.nav-li-color-main {
+	color: purple;
 }
 
 .nav-font-line-height {
@@ -13,41 +30,25 @@
 }
 
 .nav-li-letter-size {
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 .text-decoration-none {
 	text-decoration: none;
 }
 
-.header-magrin {
-	margin-left: 3%;
-}
-
-.main-section-magrin {
-	margin-left: 3%;
-}
-
-.header-p-mergin {
-margin-top: 5%;
-}
-
 h1 {
-	color: #150578;
 	text-shadow: 2px 2px #ccc;
+	margin-top: 0;
 }
 
-.header-margin-h {
-	margin-bottom: 0px;
+.main-width-img {
+	width: 520px;
 }
 
-.header-width-img {
-	width: 455px;
-}
-
-.header-width-h {
+.main-width-h {
 	width: 685px;
-	font-size: 1.8em;
+	font-size: 2.2em;
 }
 
 .font-size-family-heaght {
@@ -61,7 +62,11 @@ h1 {
 }
 
 .section-li-font-size {
-	font-size: 0.7em;
+	font-size: 0.8em;
+}
+
+.section-margin-main-left {
+	margin-left: 3%;
 }
 
 .article-font-weight-h {
@@ -70,12 +75,21 @@ h1 {
 }
 
 .article-border-main {
+	background-color: white;
 	font-family: "Segoe UI";
 	border: 1px solid black;
-	margin-left: 10%;
+	margin-left: 15%;
 	padding-right: 1%;
 	padding-left: 1%;
 	width: 575px;
+}
+
+.block-element {
+	background-color: rgba(207,225,247, 0.5);
+	padding-top: 2%;
+	padding-bottom: 3%;
+	background-size: auto;
+	width: 55%;
 }
 
 .main-text-indent {
@@ -84,6 +98,10 @@ h1 {
 
 .main-text-space {
 	letter-spacing: 0.1em;
+}
+
+.main-padding-bottom {
+	padding-bottom: 0%;
 }
 
 h2 {
@@ -95,21 +113,18 @@ h2 {
 	border: 1px dashed #78C0E0;
 	border-radius: 15px;
 	text-align: right;
-	margin-top: 5%;
+	margin-top: 0;
 	padding-right: 1%;
-
+	background-color: white;
 }
 
 .footer-article-font-size {
-	font-size: 0.7em;
+	font-size: 0.8em;
 }
 
 .address-font-size {
-	font-size: 0.6em;
+	font-size: 0.7em;
 }
 
-.footer-margin-bottom-size {
-	margin-bottom: 4%;
-}
 
 
